// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders while status is <Completed> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "rescan",
        "name": "Rescan",
        "onClick": [Function],
      },
    ]
  }
  items={Array []}
/>
`;

exports[`CommandBar renders while status is <Default> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "rescan",
        "name": "Rescan",
        "onClick": [Function],
      },
    ]
  }
  items={Array []}
/>
`;

exports[`CommandBar renders while status is <Failed> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "rescan",
        "name": "Rescan",
        "onClick": [Function],
      },
    ]
  }
  items={Array []}
/>
`;

exports[`CommandBar renders while status is <Scanning> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": true,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "rescan",
        "name": "Rescan",
        "onClick": [Function],
      },
    ]
  }
  items={Array []}
/>
`;
